--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "logging"
   ],
   "dependencies": {
-    "grunt": "~0.4",
-    "grunt-contrib-jshint": "~0.6",
-    "grunt-mocha": "~0.3",
-    "mocha": "~1.10",
-    "chai": "~1.6",
-    "sinon": "~1.7",
-    "sinon-chai": "~2.4",
-    "grunt-contrib-uglify": "~0.2.2"
+    "grunt": "^0.4",
+    "grunt-contrib-jshint": "^0.6",
+    "grunt-mocha": "^1.0.4",
+    "mocha": "^1.10",
+    "chai": "^1.6",
+    "sinon": "^1.7",
+    "sinon-chai": "^2.4",
+    "grunt-contrib-uglify": "^0.2.2"
   }
 }
